# telegram-ai-cli-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  SESSION_ANALYSIS.md  pyproject.toml  run.sh
.claude/rules/: core-runtime.md  docs.md  plugins.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  SETUP.md  SPEC.md  SPEC_PLUGINS_BUILTIN.md
mcp_servers/: plugin_bridge_server.py  plugin_mcp.json
plugins/: __init__.py
plugins/builtin/: __init__.py  memo.py  weather.py
prompts/: telegram.md
src/: bootstrap.py  config.py  constants.py  logging_config.py  main.py  schedule.py  schedule_utils.py  scheduler.py  scheduler_manager.py  supervisor.py  time_utils.py  ui_emoji.py  worker_job.py
src/ai/: __init__.py  base_client.py  catalog.py  registry.py
src/bot/: command_catalog.py  constants.py  formatters.py  handlers.py  middleware.py  session_queue.py  update_dispatcher.py  update_queue.py
src/claude/: client.py  (+1 more)
tests/: conftest.py  helpers.py  test_calendar_plugin.py  test_callback_flows.py  test_client.py  test_codex_client.py  test_delivery_retry_service.py  test_detached_job_manager.py  test_diary_plugin.py  test_formatters.py  test_handler_decomposition.py  test_handlers.py  test_integration.py  test_job_service.py  test_local_session_discovery.py  test_message_split.py  test_middleware.py  test_migrations.py  test_pending_request_store.py  test_plugin_loader.py  test_plugin_scheduler.py  test_plugins.py  test_question_bank_plugin.py  test_repository.py  test_schedule_execution_service.py  test_scheduler_manager.py  test_services.py  test_session.py  test_session_changes.py  test_session_queue.py  test_state_persistence.py  test_todo_plugin.py  test_worker_job.py  test_workspace_adapter.py
(+69 files in other folders)
